--- a/css/modal.css
+++ b/css/modal.css
@@ -10,33 +10,35 @@ body {
 }
 
 h1 {
-margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 button {
-    padding: .6rem 1.2rem;
-    background-color: #4837e0;
-    color: #FFF;
+    padding: .6rem 1rem;
+    background-color: #f70101;
+    color: #ffffff;
     border: none;
     border-radius: .25rem;
     cursor: pointer;
     opacity: 0.8;
     font-size: 1rem;
+    transition: 0.4s;
 }
 
-#openModal {
-    background-color: #007bff;
+#toRecord {
+    background-color: rgb(57, 221, 25);=
 }
+#markOff {
+    background-color: rgb(255, 0, 0);
+}
+#toMark {
+    background-color: blue;
+}
+
+
 
 button:hover {
-    opacity: 1;
-}
-
-#fade, #modal {
-    transition: 0.5s;
-    opacity: 1;
-    pointer-events: all;
-
+    opacity: 2;
 }
 
 #fade {
@@ -47,6 +49,9 @@ button:hover {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.1);
     z-index: 10;
+    opacity: 1;
+    pointer-events: none;
+    border-radius: 1rem;
 }
 
 #modal {
@@ -55,11 +60,13 @@ button:hover {
     top: 50%;
     transform: translate(-50%, -50%);
     background-color: #ffffff;
+    z-index: 10;
     width: 500px;
-    max-height: 80%;
-    max-width: 80%;
+    max-height: 90%;
+    max-width: 90%;
     padding: 1.2rem;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
+    transition: .5s;
 }
 
 .modalHeader {
@@ -75,7 +82,8 @@ button:hover {
     margin-bottom: 1rem;
 }
 
-#modal.hide, #fade.hide {
+#modal.hide,
+#fade.hide {
+    top: 0;
     opacity: 0;
-    pointer-events: none;
 }
